# private-assistant-spotify-skill-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Containerfile  README.md  config.yaml  mypy.ini  pyproject.toml  pytest.toml
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  docker-build-action.yml  python_code_quality.yml
docs/: main.md
integration/: __init__.py  test_integration.py
scripts/: create_token.py
src/private_assistant_spotify_skill/: __init__.py  config.py  db_cache_handler.py  extract_ids_from_text.py  main.py  models.py  spotify_skill.py
src/private_assistant_spotify_skill/templates/: continue.j2  help.j2  list_devices.j2  list_playlists.j2  next_track.j2  playback_started.j2  playback_stopped.j2  set_volume.j2
tests/: test_config.py  test_integration.py  test_spotify_skill.py
tests/data/: config.yaml
