[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-spotify-skill"
version = "2.1.0"
description = "This package allows to use spotify within the private assistant ecosystem."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "spotipy~=2.25.2",
    "private-assistant-commons~=5.4.0",
    "jinja2~=3.1.4",
    "valkey[libvalkey]~=6.1.1",
    "typer~=0.21.0"
]

[project.scripts]
private-assistant-spotify-skill = "private_assistant_spotify_skill.main:app"

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-spotify-skill-py"
Repository = "https://github.com/stkr22/private-assistant-spotify-skill-py"
Documentation = "https://github.com/stkr22/private-assistant-spotify-skill-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-spotify-skill-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-spotify-skill-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.1",
    "mypy~=1.17.0",
    "pytest~=9.0.0",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.8.0",
    "coverage[toml]~=7.10.6",
    "pytest-asyncio~=1.3.0",
    "types-pyyaml~=6.0.12.20240311",
]

[[tool.mypy.overrides]]
module = [
    "spotipy.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["private_assistant_spotify_skill"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
