[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-spotify-skill"
version = "2.2.0"
description = "This package allows to use spotify within the private assistant ecosystem."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "spotipy~=2.25.2",
    "private-assistant-commons~=6.3.0",
    "jinja2~=3.1.4",
    "valkey[libvalkey]~=6.1.1",
    "typer~=0.21.1"
]

[project.scripts]
private-assistant-spotify-skill = "private_assistant_spotify_skill.main:app"

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-spotify-skill-py"
Repository = "https://github.com/stkr22/private-assistant-spotify-skill-py"
Documentation = "https://github.com/stkr22/private-assistant-spotify-skill-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-spotify-skill-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-spotify-skill-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
    "types-pyyaml~=6.0.12.20240311",
]
